--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/lodash": "^4.17.23",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "morgan": "^1.10.0"
   },
@@ -33,9 +35,9 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.12",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "eslint": "^9.26.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
