--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "tsc",
     "lint": "eslint --fix src test"
   },
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "keywords": [],
   "author": "Enrique Becerra <kabeza@gmail.com> (https://beza.com.ar)",
   "repository": {
