--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api en NodeJS/Express/Cheerio para obtener los resultados del Quini 6",
   "main": "src/index.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "yarn start",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test"
